WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54917
Overhang areas need to be invalidated on scroll
https://bugs.webkit.org/show_bug.cgi?id=54917
Summary
Overhang areas need to be invalidated on scroll
Sam Weinig
Reported
2011-02-21 17:11:01 PST
Overhang areas need to be invalidated on scroll
Attachments
Patch
(1.69 KB, patch)
2011-02-21 17:14 PST
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-02-21 17:14:18 PST
Created
attachment 83243
[details]
Patch
mitz
Comment 2
2011-02-21 17:16:03 PST
Comment on
attachment 83243
[details]
Patch Is this patch missing a Radar link, the bug missing an InRadar keyword and Radar link, etc.?
Sam Weinig
Comment 3
2011-02-21 17:18:07 PST
<
rdar://problem/9032194
>
Sam Weinig
Comment 4
2011-02-21 17:18:35 PST
Committed
r79265
: <
http://trac.webkit.org/changeset/79265
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug