2011-02-21  Sam Weinig  <sam@webkit.org>

Reviewed by Dan Bernstein.

        Overhang areas need to be invalidated on scroll
        <rdar://problem/9032194>
        https://bugs.webkit.org/show_bug.cgi?id=54917

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::scrollContents):
        We need to explicitly invalidate the overhang areas when we scroll the contents
        of a ScrollView, since they could contain arbitrary content that cannot be blitted.


Canonical link: https://commits.webkit.org/69191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79265 268f45cc-cd09-0410-ab3c-d52691b4dbfc